Feat: Implement mysite2 using JSTL, factory method pattern

--- a/mysite/mysite2/src/main/webapp/assets/css/main.css
+++ b/mysite/mysite2/src/main/webapp/assets/css/main.css
@@ -1,7 +1,7 @@
-@CHARSET "UTF-8";
+@charset "UTF-8";
 @import "mysite.css";
 
-#site-introduction				{ padding:20px;	width:540px; }
-#site-introduction img#profile	{ display:block; float:left }
-#site-introduction h2		   	{ float:left; width:320px; margin:50px 0 0 20px }
-#site-introduction p			{ clear:both; font-size:1.1em; padding:20px; line-height:1.5em }
+#site-introduction				{ display:flex; flex-direction:column; padding:20px; width:540px }
+#site-introduction img#profile	{ margin:auto; }
+#site-introduction h2		   	{ margin:30px auto 0 }
+#site-introduction p			{ clear:both; font-size:1.1em; padding:20px; margin:auto; line-height:1.5em }
