Fix: Add id 'root' in scss file

--- a/react-practices/tabbox/frontend/src/assets/scss/App.scss
+++ b/react-practices/tabbox/frontend/src/assets/scss/App.scss
@@ -15,8 +15,10 @@ html {
     padding: 32px;
     margin: 60px auto;
 
-    :global(#App) {
-      width: 100%;
+    :global(#root) {
+      :global(#App) {
+        width: 100%;
+      }
     }
   }
 }
