Feat: Implement tabbox using react hooks

--- a/react-practices/tabbox/frontend/src/assets/scss/App.scss
+++ b/react-practices/tabbox/frontend/src/assets/scss/App.scss
@@ -1,12 +1,14 @@
 @charset "utf-8";
 
 html {
-  margin: 0;
-  padding: 0;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  text-rendering: optimizelegibility;
-  letter-spacing: -0.25px;
+  * {
+    margin: 0;
+    padding: 0;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    text-rendering: optimizelegibility;
+    letter-spacing: -0.25px;
+  }
 
   body {
     font-family: "Space Mono", monospace;
