--- a/react-practices/emaillist08/frontend/src/assets/scss/App.scss
+++ b/react-practices/emaillist08/frontend/src/assets/scss/App.scss
@@ -1,10 +1,12 @@
 @charset "utf-8";
 
 html {
-  margin: 0;
-  padding: 0;
-  font: 0.75em "맑은 고딕", "돋움", "굴림";
-  text-align: center;
+  * {
+    margin: 0;
+    padding: 0;
+    font: 0.75em "맑은 고딕", "돋움", "굴림";
+    text-align: center;
+  }
 
   body {
     :global(#root) {
